syntax = "proto3";

package actual_ballots_service;

enum InvalidReason {
  WrongDistrict = 0;
  DecryptionError = 1;
}