syntax = "proto3";

package actual_ballots_service;

import "variants/ballot_status.proto";

message TxActualBallot {
  string voter = 1;
  uint32 district_id = 2;
  repeated uint32 decrypted_choices = 3;
  string store_tx_hash = 4;
  string decrypt_tx_hash = 5;
  actual_ballots_service.BallotStatus status = 6;
}

message TxCreateActualBallotsStorage {
  string voting_id = 1;
}

message TxStoreGroupedTxHash {
  string voting_id = 1;
  string store_tx_hash = 2;
  string encrypted_group_id = 3;
  int64 ts = 4;
}

message TxResolveGroupIds {
  string voting_id = 1;
  map<string, string> resolved_group_ids = 2;
}

message TxStoreActualBallots {
  string voting_id = 1;
  repeated TxActualBallot actual_ballots = 2;
}

message TxTallyResults {
  string voting_id = 1;
  uint64 seed = 2;
}
